# charon

./: .bzrignore  BlockMatching.cpp  BlockMatching.hxx  CMakeLists.txt  COPYING.txt  CTestConfig.cmake  CTestCustom.cmake.in  Constant.cpp  GBCCE.hxx  IncrementorConstant.hxx  IncrementorDiffusion.h  IncrementorDiffusion.hxx  IncrementorExponential.h  IncrementorExponential.hxx  IncrementorMovingIllumination.hxx  IncrementorParameter.h  IncrementorParameter.hxx  ListedPixelSelection.h  ObjectivFunctionComparing.hxx  PetscSolver.hxx  PixelSelection.h  README.txt  SurfaceAnalysis.hxx  Todo.txt  main.cpp  resources.qrc  solver.hxx  stencil.hxx
app/: AdvancedInspector.cpp  CMakeLists.txt  MacOSInfo.plist.in  MainWindow.cpp  MainWindow.h  ParamInspectorWindow.cpp  ParamInspectorWindow.h  charon-paths.txt.in  charon.cpp  getopt.c  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paramInspectorApp.cpp  paraminspector.cpp  paraminspector.desktop  resource.qrc  resources.qrc  resources.qrc.in  tuchulcha-run.cpp  tuchulcha.cpp  tuchulcha.desktop  xmlModuleDetector.cpp
app/res/: FileReader.h  FileReader.hxx  NonTempCpp.cpp  NonTempH.h  Sample.h  TempCpp.cpp  TempH.h  TempHxx.hxx
charon-core/app/: CMakeLists.txt  charon.cpp  getopt.c  getopt_standalone.h
charon-utils/app/: CMakeLists.txt  xmlModuleDetector.cpp
charon-utils/src/: AmplitudeThreshold.cpp  AngularError.cpp  ArgosDisplay.cpp  ArgosDisplayReloader.cpp  BinOperator.cpp  BinOperatorCImg.cpp  BinOperatorValue.cpp  CImg2VigraMultiArray.cpp  CMakeLists.txt  ChannelConverter.cpp  ColorMask.cpp  Crop.cpp  CustomColorMask.cpp  Cut.cpp  Demux2.cpp  DilationErosion.cpp  DiscretizeByThreshold.cpp  DrawCImg.cpp  EmptyCImg.cpp  EndpointError.cpp  ErodeDilate.cpp  FileReader.cpp  FileReaderHDF5.cpp  FileReaderWatcher.cpp  FileWriter.cpp  FileWriterHDF5.cpp  FitSizes.cpp  FloReader.cpp  FloWriter.cpp  Flow2HSV.cpp  FlowQuiver.cpp  FrameSelect.cpp  FrameSelectCImg.cpp  GammaCorrection.cpp  GreaterSmallerThenPar.cpp  ImageBlur.cpp  ImageDisplay.cpp  Images2Sequence.cpp  Int2Uint.cpp  InterpolatorCubic.cpp  (+44 more)
src/: AbstractData.hxx  AbstractPluginLoader.cpp  AbstractPluginLoader.h  AdvancedInspector.cpp  AdvancedInspector.h  AffineBCC.cpp  AmplitudeThreshold.cpp  AngularError.cpp  ArgosDisplay.cpp  ArgosDisplayReloader.cpp  BinOperator.cpp  BinOperatorCImg.cpp  BinOperatorValue.cpp  BlockMatching.h  BlockMatching.hxx  BlockMatching.h~  BrightnessModel.h  BrightnessModel.h~  BrightnessModelConstant.cpp  BrightnessModelDiffusion.cpp  BrightnessModelExponential.cpp  BrightnessModelMovingIllumination.cpp  CDFitFunction.cpp  CGSolver.cpp  CGSolverHelper.cpp  CImg.h  CImg2VigraMultiArray.cpp  CImg2VigraMultiArray.h  CImg2VigraMultiArray.hxx  CMakeLists.txt  CTestTestfile.cmake  CdFitter.cpp  CentralMdiArea.cpp  CentralMdiArea.h  ChannelConverter.cpp  ChannelConverter.h  ChannelConverter.hxx  CharonRun.cpp  CharonRun.h  CliqueWeightNonLocal.cpp  (+420 more)
src/BlockMatching/: BlockMatchingLIACS.cpp  BlockMatchingLIACS.h  BlockMatchingLIACS.hxx
src/BrightnessModels/: BrightnessFunctorInterface.h  Constant.cpp  Constant.h  Constant.hxx  Diffusion.cpp  Diffusion.h  Diffusion.hxx  Exponential.cpp  Exponential.h  Exponential.hxx  MovingIllumination.cpp  MovingIllumination.h  MovingIllumination.hxx
src/DataAssemblers/: nRange.h  nrange.cpp
src/Derivatives/: Sobel.cpp  Sobel.h  Sobel.hxx  bin2.cpp  bin2.h  bin2.hxx
src/Fitters/: LeastSquare.cpp  LeastSquare.h
src/IO/: ._FileWriter.h  FileReader.h  FileReader.hxx  FileWriter.h  FileWriter.hxx
src/Incrementors/: IncrementorConstant.h  IncrementorConstant.hxx  IncrementorCountUp.cpp  IncrementorCountUp.h  IncrementorCountUp.hxx  IncrementorDiffusion.h  IncrementorDiffusion.hxx  IncrementorExponential.h  IncrementorExponential.hxx  IncrementorMovingIllumination.h  IncrementorMovingIllumination.hxx
src/IterativeSolvers/: SampleIterativeSolver.cpp  SampleIterativeSolver.h  SampleIterativeSolver.hxx
src/MotionModels/: ._LocalAffiness.cpp  LocalAffiness.cpp  LocalAffiness.h  LocalAffiness.hxx  LocalConstant.cpp  LocalConstant.h  LocalConstant.hxx  LocalPlanarity.cpp  LocalPlanarity.h  LocalPlanarity.hxx  LocalRotation.cpp  LocalRotation.h  LocalRotation.hxx  LocalStretch.cpp  LocalStretch.h  LocalStretch.hxx
src/ObjectiveFunctions/: ObjectiveFunctionComparing.cpp  ObjectiveFunctionComparing.h  ObjectiveFunctionComparing.hxx
src/PixelSelections/: ListedPixelSelection.cpp  ListedPixelSelection.h  ListedPixelSelection.hxx
src/PsiSolvers/: SamplePsiSolver.cpp  SamplePsiSolver.h  SamplePsiSolver.hxx
src/RobustnessTerms/: SquarerootRobustnessTerm.cpp  SquarerootRobustnessTerm.h  SquarerootRobustnessTerm.hxx
src/SequenceGeneration/: SequenceGeneration.cpp  SequenceGeneration.h
src/Solvers/: PetscSolver.cpp  PetscSolver.h  PetscSolver.hxx
src/Stencils/: GBCCE.cpp  GBCCE.h  GBCCE.hxx  Gbcce.cpp  Gbcce.h  Gbcce.hxx  L2Norm.cpp  L2Norm.h  L2Norm.hxx  PsiStencil.cpp  PsiStencil.h  PsiStencil.hxx
src/SurfaceAnalysis/: SurfaceAnalysisMinChange.cpp  SurfaceAnalysisMinChange.h  SurfaceAnalysisMinChange.hxx
src/SurfaceAnalysises/: SurfaceAnalysisMinChange.h  SurfaceAnalysisMinChange.hxx
test/: CMakeLists.txt  CasedDummy.h  DummyModule.cpp  DynamicDummyModule.cpp  Flow1_HS_Sinus.cpp  Flow2_HS_Yosemite.cpp  Flow3_HS_Yosemite_NP.cpp  HornSchunckIteratorTest.cpp  HornSchunckIteratorYosemiteTest.cpp  HornSchunckYosemite.cpp  HornSchunckYosemite.wrp  HornSchunckYosemiteNoPlugins.cpp  LogViewTest.cpp  LogViewTest.h  NestedIteratorTest.cpp  Penguin.cimg  PenguinBlurred.cimg  Petsc1_Init.cpp  Petsc2_Plugins.cpp  Petsc3_PluginLoad.cpp  Petsc4_PetscSharedLib.cpp  Petsc4_PetscSharedLibLoad.cpp  PetscInitializationTest.cpp  PetscPluginTest.cpp  PetscSolverDLLTest.cpp  PetscSolverTest.cpp  PetscTestDLL.cpp  PetscTestDLLLoad.cpp  Point4DTest.cpp  QParameterFileModelTest.cpp  QParameterFileModelTest.h  QParameterFileTest.cpp  QParameterFileTest.h  QVariantMappingTest.cpp  QVariantMappingTest.h  RelaxingTest.cpp  SimpleIteratorTest.cpp  StatementGenerator.cpp  StatementGenerator.h  VirtualSlotTestReader.cpp  (+108 more)
(+1252 files in other folders)
